# genai-hackhathon

client/: package.json  pnpm-lock.yaml
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/global/: navbar.tsx
client/src/components/shared/: customButton.tsx
client/src/components/ui/: button.tsx
server/: .env  .gitignore  graph.py  graph_state.py  langgraph.json  llm.py  main.py  pyproject.toml  workflow.py
server/agent/agent_graph/: agent_graph.py
server/agent/agent_graph_state/: agent_graph_state.py
server/agent/agent_nodes/: extract_content.py  rag_node.py  refiner.py
server/agent/agent_workflow/: agent_workflow.py
server/config/: llm.py
server/helpers/: create_vector_index.py  retriever.py
server/nodes/: doc_content_extractor.py  extract_content.py  initial_validator.py  not_valid.py  valid.py  valid_router.py
server/schema/: category_schema.py  initial_validator.py  initial_validator_schema.py
server/uploader/uploader_graph/: uploader_graph.py
server/uploader/uploader_graph_state/: uploader_graph_state.py
server/uploader/uploader_nodes/: chunking_embedding.py  doc_categorizer.py  explanation.py  extract_content.py  initial_validator.py  not_valid.py  summarizer.py  valid.py  valid_router.py
server/uploader/uploader_workflow/: uploader_workflow.py
